[build-system]
requires = ["flit_core >=3.4,<4", "wheel", "oldest-supported-numpy"]
build-backend = "flit_core.buildapi"

[project]
name = "poliastro"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "COPYING" }
authors = [{ name = "Juan Luis Cano Rodríguez", email = "hello@juanlu.space" }]
maintainers = [
    { name = "Juan Luis Cano Rodríguez", email = "hello@juanlu.space" },
    { name = "Jorge Martinez Garrido", email = "contact@jorgemartinez.space" },
]
keywords = [
    "aero",
    "aerospace",
    "engineering",
    "astrodynamics",
    "orbits",
    "kepler",
    "orbital mechanics",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy >=5.0",
    "astroquery >=0.3.9",
    "jplephem >=2.22",
    "matplotlib >=2.0,!=3.0.1",
    "numba >=0.53.0",
    "numpy >=2.0",
    "pandas >=2.0",
    "plotly >=4.0",
    "pyerfa >=2.0",
    "scipy >=1.4.0",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://www.poliastro.space"
Documentation = "https://docs.poliastro.space"
Source = "https://github.com/poliastro/poliastro"
Tracker = "https://github.com/poliastro/poliastro/issues"
Funding = "https://opencollective.com/poliastro"
Changelog = "https://docs.poliastro.space/en/stable/changelog.html"

[tool.flit.sdist]
include = [
    "src/poliastro/atmosphere/data/coesa62.dat",
    "src/poliastro/atmosphere/data/coesa76.dat",
    "src/poliastro/atmosphere/data/coesa76_p.dat",
    "src/poliastro/atmosphere/data/coesa76_rho.dat",
    "setup.cfg",
]
exclude = ["docs/"]

[tool.black]
line-length = 79

[tool.ruff]
select = [
    "E", # pycodestyle, see https://github.com/charliermarsh/ruff#pycodestyle-e-w
    #    "D",  # pydocstyle, see https://github.com/charliermarsh/ruff#pydocstyle-d
    "F", # pyflakes, see https://github.com/charliermarsh/ruff#pyflakes-f
    "I", # isort, see https://github.com/charliermarsh/ruff#isort-i
]

ignore = [
    "E501", # Line too long. Ignoring this so "black" manages line length.
]

exclude = [".git", ".tox", ".venv", "build", "dist"]

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["poliastro"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.mypy]
check_untyped_defs = true
strict_optional = false
ignore_missing_imports = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
omit = ["contrib/*"]
show_missing = true

[tool.importlinter]
# Include Astropy to properly analyze external submodules,
# see https://github.com/seddonym/import-linter/issues/111
root_packages = ["poliastro", "astropy"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "poliastro.core does not import astropy.units"
type = "forbidden"
source_modules = ["poliastro.core"]
forbidden_modules = ["astropy.units"]

[tool.pytest.ini_options]
norecursedirs = [".git", ".tox", "dist", "build", ".venv"]
testpaths = ["tests"]
python_files = "test_*.py"
doctest_plus = false
addopts = ["--strict-markers"]
markers = ["slow", "remote_data", "filterwarnings", "mpl_image_compare"]
